--- a/angular/src/app/project/project.component.html
+++ b/angular/src/app/project/project.component.html
@@ -6,7 +6,7 @@
                     <h1>{{ "Projects" | localize }}</h1>
                 </div>
                 <div class="col-6 text-right">
-                    <a href="javascript:;" class="btn bg-blue" (click)="createProject()">
+                    <a href="javascript:;" class="btn bg-blue" (click)="createProject()" *ngIf="isGranted('Pages.Manage.Project')">
                         <i class="fa fa-plus-square"></i>
                         {{ "Create" | localize }}
                     </a>
@@ -149,7 +149,7 @@
                                             <i class="fas fa-pencil-alt"></i>
                                             {{ "Edit" | localize }}
                                         </button>
-                                        <button type="button"
+                                        <button type="button" *ngIf="isGranted('Pages.Manage.Project')"
                                                 class="btn btn-sm bg-danger mx-2"
                                                 (click)="delete(project)">
                                             <i class="fas fa-trash"></i>
