--- a/angular/src/app/project/edit-project/edit-project.component.html
+++ b/angular/src/app/project/edit-project/edit-project.component.html
@@ -8,10 +8,11 @@
             </div>
         </div>
     </section>
-    <section class="content px-2">
+
+    <section class="container-fluid ng-tns-c101-4">
         <div class="container-fluid">
             <div class="col-md-9">
-                <div class="card-body">
+                <div class="card-body card ng-tns-c101-3">
 
                     <form class="form-horizontal"
                           autocomplete="off"
@@ -285,7 +286,7 @@
     <section class="content px-2">
         <div class="container-fluid">
             <div class="col-md-9">
-                <div class="card-body" style="width:100% !important;">
+                <div class="card-body card ng-tns-c101-3" style="width:100% !important;">
 
                     <form class="form-horizontal" *ngIf="isGranted('Pages.Manage.Project')"
                           autocomplete="off"
