--- a/angular/src/shared/core.less
+++ b/angular/src/shared/core.less
@@ -192,3 +192,7 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
     line-height: 1.5;
     text-align: center;
 }
+.col-container {
+    width: 100% !important;
+}
+
