--- a/angular/src/app/project/edit-project/edit-project.component.html
+++ b/angular/src/app/project/edit-project/edit-project.component.html
@@ -11,7 +11,7 @@
 
     <section class="container-fluid ng-tns-c101-4">
         <div class="container-fluid">
-            <div class="col-md-9">
+            <div class="col-container">
                 <div class="card-body card ng-tns-c101-3">
 
                     <form class="form-horizontal"
@@ -285,7 +285,7 @@
 
     <section class="content px-2">
         <div class="container-fluid">
-            <div class="col-md-9">
+            <div class="col-container">
                 <div class="card-body card ng-tns-c101-3" style="width:100% !important;">
 
                     <form class="form-horizontal" *ngIf="isGranted('Pages.Manage.Project')"
