--- a/angular/src/shared/core.less
+++ b/angular/src/shared/core.less
@@ -195,4 +195,8 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 .col-container {
     width: 100% !important;
 }
+.modal-content {
+    width: 1000px !important;
+    border-radius:15px;
+}
 
