--- a/angular/src/app/project/project.component.html
+++ b/angular/src/app/project/project.component.html
@@ -147,7 +147,7 @@
                                                 class="btn btn-sm bg-secondary"
                                                 (click)="editProject(project)">
                                             <i class="fas fa-pencil-alt"></i>
-                                            {{ "Edit" | localize }}
+                                            {{ "ProjectDetails" | localize }}
                                         </button>
                                         <button type="button" *ngIf="isGranted('Pages.Manage.Project')"
                                                 class="btn btn-sm bg-danger mx-2"
