--- a/angular/src/app/project/project.component.html
+++ b/angular/src/app/project/project.component.html
@@ -35,7 +35,7 @@
                                        [placeholder]="'SearchWithThreeDot' | localize"
                                        [(ngModel)]="keyword"
                                        (keyup.enter)="getDataPage(1)" />
-                                <!--<div class="input-group-append">
+                                <div class="input-group-append">
                                     <button type="button"
                                             class="btn btn-default"
                                             (click)="advancedFiltersVisible = !advancedFiltersVisible">
@@ -43,7 +43,7 @@
                                            [class.fa-angle-up]="advancedFiltersVisible"
                                            [class.fa-angle-down]="!advancedFiltersVisible"></i>
                                     </button>
-                                </div>-->
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -53,46 +53,40 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group row mb-0">
-                                            <label class="col-md-3 col-form-label">
-                                                {{ "IsActive" | localize }}
+                                            <label class="col-md-3 col-form-label" for="ADDRESS">
+                                                {{ "AgencyType" | localize }}
                                             </label>
-                                            <div class="col-md-9 pt-2">
-                                                <div class="custom-control custom-radio d-inline">
-                                                    <input type="radio"
-                                                           class="custom-control-input"
-                                                           id="isActiveAll"
-                                                           name="isActive"
-                                                           [(ngModel)]="isActive"
-                                                           [value]="undefined"
-                                                           checked />
-                                                    <label class="custom-control-label" for="isActiveAll">
-                                                        {{ "All" | localize }}
-                                                    </label>
-                                                </div>
-                                                <div class="custom-control custom-radio d-inline mx-3">
-                                                    <input type="radio"
-                                                           class="custom-control-input"
-                                                           id="isActiveActive"
-                                                           name="isActive"
-                                                           [(ngModel)]="isActive"
-                                                           [value]="true" />
-                                                    <label class="custom-control-label"
-                                                           for="isActiveActive">
-                                                        {{ "Yes" | localize }}
-                                                    </label>
-                                                </div>
-                                                <div class="custom-control custom-radio d-inline">
-                                                    <input type="radio"
-                                                           class="custom-control-input"
-                                                           id="isActivePassive"
-                                                           name="isActive"
-                                                           [(ngModel)]="isActive"
-                                                           [value]="false" />
-                                                    <label class="custom-control-label"
-                                                           for="isActivePassive">
-                                                        {{ "No" | localize }}
-                                                    </label>
-                                                </div>
+                                            <div class="col-md-8">
+                                                <select name="agencyTypeId"
+                                                        class="form-control"
+                                                        id="agencyTypeId" [(ngModel)]="projectAgencyTypeId"
+                                                        (ngModelChange)="onTypeChange()"
+                                                        #agencyTypeIdModel="ngModel"
+                                                        #agencyTypeId>
+                                                    <option *ngFor="let agencyType of agencyTypes" [value]="agencyType.id">{{agencyType.name}}</option>
+                                                </select>
+
+                                                <!--<abp-validation-summary [control]="agencyTypeIdModel"
+                                        [controlEl]="agencyTypeId"></abp-validation-summary>-->
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="form-group row mb-0">
+                                            <label class="col-md-3 col-form-label" for="ADDRESS">
+                                                {{ "Agency" | localize }}
+                                            </label>
+                                            <div class="col-md-8">
+                                                <select name="AgencyId"
+                                                        class="form-control"
+                                                        id="AgencyId" [(ngModel)]="projectAgencyId"
+                                                        #agencyIdModel="ngModel"
+                                                        #agencyId>
+                                                    <option *ngFor="let agency of agencies" [value]="agency.id">{{agency.name}}</option>
+                                                </select>
+
+                                             
                                             </div>
                                         </div>
                                     </div>
