--- a/angular/src/shared/core.less
+++ b/angular/src/shared/core.less
@@ -200,3 +200,13 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
     border-radius:15px;
 }
 
+.custom-control {
+    position: relative;
+    z-index: 1;
+    display: block;
+    min-height: 1.5rem;
+    padding-left: 1.5rem;
+    -webkit-print-color-adjust: exact;
+    color-adjust: exact;
+    float:right !important;
+}
