--- a/angular/src/app/requests/request-view/request-view.component.html
+++ b/angular/src/app/requests/request-view/request-view.component.html
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <h1>{{ "Create" | localize }}</h1>
+                    <h1>{{ "Edit" | localize }}</h1>
                 </div>
             </div>
         </div>
@@ -21,8 +21,92 @@
 
 
                         <div class="row">
+                            <div class="form-group row required col-6">
+                                <label class="col-md-3 col-form-label" for="Name">
+                                    {{ "ProjectName" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <input type="text"
+                                           class="form-control" disabled
+                                           name="projectname"
+                                           id="projectname"
+                                           required
+                                           maxlength="32"
+                                           [(ngModel)]="projectName"
+                                           #projectnameModel="ngModel"
+                                           #projectnameE1 />
+                                    <abp-validation-summary [control]="projectnameModel"
+                                                            [controlEl]="projectnameE1"></abp-validation-summary>
+                                </div>
+                            </div>
 
-                        
+
+                            <div class="form-group row required col-6">
+                                <label class="col-md-3 col-form-label" for="CommericalRegisterationNumber">
+                                    {{ "ContractNumber" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <input type="text"
+                                           class="form-control" disabled
+                                           name="contractNumber"
+                                           id="contractNumber"
+                                           required
+                                           maxlength="32"
+                                           [(ngModel)]="projectContractNumber"
+                                           #contractNumberModel="ngModel"
+                                           #contractNumber />
+                                    <abp-validation-summary [control]="contractNumberModel"
+                                                            [controlEl]="contractNumber"></abp-validation-summary>
+                                </div>
+                            </div>
+
+
+                            <div class="form-group row required col-6">
+                                <label class="col-md-3 col-form-label" for="ADDRESS">
+                                    {{ "StartDate" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <input type="date"
+                                           class="form-control" disabled
+                                           name="startDate"
+                                           id="startDate"
+                                           style="text-align: right;"
+                                           required
+                                           maxlength="32"
+                                           [(ngModel)]="startDatemodel"
+                                           #startDateModel="ngModel"
+                                           #startDate />
+                                    <abp-validation-summary [control]="startDateModel"
+                                                            [controlEl]="startDate"></abp-validation-summary>
+                                </div>
+                            </div>
+
+                            <div class="form-group row required col-6">
+                                <label class="col-md-3 col-form-label" for="ADDRESS">
+                                    {{ "EndProject" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <input type="date"
+                                           class="form-control" disabled
+                                           style="text-align: right;"
+                                           name="completeDate"
+                                           id="completeDate"
+                                           required
+                                           maxlength="32"
+                                           [(ngModel)]="completeDatemodel"
+                                           #completeDateModel="ngModel"
+                                           #completeDate />
+                                    <abp-validation-summary [control]="completeDateModel"
+                                                            [controlEl]="completeDate"></abp-validation-summary>
+                                </div>
+                            </div>
+
+
+
+
+
+
+
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="Name">
                                     {{ "Name" | localize }}
@@ -223,19 +307,7 @@
                             </div>
 
                         </div>
-                        <button *ngIf="request.id==0" type="submit"
-                                [disabled]="!createRequestForm.form.valid || saving"
-                                class="btn btn-primary"
-                                aria-label="Close">
-                            {{ saveText | localize }}
-                        </button>
-
-                        <button *ngIf="request.id>0" type="submit"
-                                [disabled]="requestTests.length==0"
-                                class="btn btn-primary"
-                                aria-label="Close">
-                            {{ "SendToConsultant" | localize }}
-                        </button>
+                    
                     </form>
 
                 </div>
@@ -271,15 +343,15 @@
                                 </div>
                             </div>
 
-                          
 
-                            <button type="button"
+
+                            <!--<button type="button"
                                     [disabled]="!requestInspectionForm.form.valid || saving"
                                     class="btn btn-primary col-1" style="margin-right: 14px"
                                     (click)="saveInspectionTest()"
                                     aria-label="Close">
                                 {{ "Save" | localize }}
-                            </button>
+                            </button>-->
                         </div>
 
 
@@ -291,7 +363,7 @@
                                     <th>{{ "Name" | localize }}</th>
                                     <th>{{ "Code" | localize }}</th>
                                     <th>{{ "Cost" | localize }}</th>
-                                    <th style="width: 310px;"></th>
+                                 
                                 </tr>
                             </thead>
                             <tbody>
@@ -299,15 +371,7 @@
                                     <td>{{ requestTest.name }}</td>
                                     <td>{{ requestTest.code }}</td>
                                     <td>{{ requestTest.cost}}</td>
-                                    <td>
-
-                                        <button type="button"
-                                                class="btn btn-sm bg-danger mx-2"
-                                                (click)="delete(requestTest)">
-                                            <i class="fas fa-trash"></i>
-                                            {{ "Delete" | localize }}
-                                        </button>
-                                    </td>
+                                    
                                 </tr>
                             </tbody>
                         </table>
