--- a/angular/src/app/requests/requests.component.html
+++ b/angular/src/app/requests/requests.component.html
@@ -153,16 +153,23 @@
                                     <td *ngIf="isGranted('Pages.Manage.Agences')">
                                         <button type="button"
                                                 class="btn btn-sm bg-secondary"
-                                                (click)="editRow(inspectionTest)">
+                                                (click)="editRow(request)">
                                             <i class="fas fa-pencil-alt"></i>
                                             {{ "Edit" | localize }}
                                         </button>
                                         <button type="button"
                                                 class="btn btn-sm bg-danger mx-2"
-                                                (click)="delete(inspectionTest)">
+                                                (click)="delete(request)">
                                             <i class="fas fa-trash"></i>
                                             {{ "Delete" | localize }}
                                         </button>
+                                        <button type="button"
+                                                class="btn btn-sm bg-primary"
+                                                (click)="viewRow(request)">
+                                            <i class="fa fa-eye"></i>
+                                            {{ "View" | localize }}
+                                        </button>
+
 
                                     </td>
                                 </tr>
