--- a/angular/src/app/requests/request-create/request-create.component.html
+++ b/angular/src/app/requests/request-create/request-create.component.html
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <h1>{{ "Create" | localize }}</h1>
+                    <h1>{{ "AddRequest" | localize }}</h1>
                 </div>
             </div>
         </div>
@@ -41,24 +41,7 @@
                                                             [controlEl]="nameE1"></abp-validation-summary>
                                 </div>
                             </div>
-                            <div class="form-group row required col-6">
-                                <label class="col-md-3 col-form-label" for="CommericalRegisterationNumber">
-                                    {{ "Code" | localize }}
-                                </label>
-                                <div class="col-md-9">
-                                    <input type="text" [disabled]="request.id>0"
-                                           class="form-control"
-                                           name="code"
-                                           id="code"
-                                           required
-                                           maxlength="32"
-                                           [(ngModel)]="request.code"
-                                           #codeModel="ngModel"
-                                           #codeE1 />
-                                    <abp-validation-summary [control]="codeModel"
-                                                            [controlEl]="codeE1"></abp-validation-summary>
-                                </div>
-                            </div>
+                      
 
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="ADDRESS">
