--- a/angular/src/app/requests/request-edit/request-edit.component.html
+++ b/angular/src/app/requests/request-edit/request-edit.component.html
@@ -324,71 +324,96 @@
         <div class="container-fluid">
             <div class="col-container">
                 <div class="card-body card ng-tns-c101-3" style="width:100% !important;">
+                    <tabset>
+                        <tab [heading]="'InspectionTest' | localize" class="pt-3 px-2">
+                            <form class="form-horizontal"
+                                  autocomplete="off"
+                                  #requestInspectionForm="ngForm"
+                                  (ngSubmit)="saveProductItems()">
 
-                    <form class="form-horizontal"
-                          autocomplete="off"
-                          #requestInspectionForm="ngForm"
-                          (ngSubmit)="saveProductItems()">
+                                <div class="row" style="display: -webkit-box !important">
+                                    <div class="form-group row col-8 required">
+                                        <label class="col-md-3 col-form-label" for="Name">
+                                            {{ "InspectionTest" | localize }}
+                                        </label>
+                                        <div class="col-md-9">
+                                            <select name="inspectionTestId"
+                                                    class="form-control"
+                                                    id="inspectionTestId" [(ngModel)]="requestInspection.inspectionTestId"
+                                                    #inspectionTestIdModel="ngModel"
+                                                    #inspectionTestId required>
+                                                <option *ngFor="let inspectionTest of inspectionTests" [value]="inspectionTest.id">{{inspectionTest.name}}</option>
+                                            </select>
+                                            <abp-validation-summary [control]="inspectionTestIdModel"
+                                                                    [controlEl]="inspectionTestId"></abp-validation-summary>
+                                        </div>
+                                    </div>
 
-                        <div class="row" style="display: -webkit-box !important">
-                            <div class="form-group row col-8 required">
-                                <label class="col-md-3 col-form-label" for="Name">
-                                    {{ "InspectionTest" | localize }}
-                                </label>
-                                <div class="col-md-9">
-                                    <select name="inspectionTestId"
-                                            class="form-control"
-                                            id="inspectionTestId" [(ngModel)]="requestInspection.inspectionTestId"
-                                            #inspectionTestIdModel="ngModel"
-                                            #inspectionTestId required>
-                                        <option *ngFor="let inspectionTest of inspectionTests" [value]="inspectionTest.id">{{inspectionTest.name}}</option>
-                                    </select>
-                                    <abp-validation-summary [control]="inspectionTestIdModel"
-                                                            [controlEl]="inspectionTestId"></abp-validation-summary>
+
+
+                                    <button type="button"
+                                            [disabled]="!requestInspectionForm.form.valid || saving"
+                                            class="btn btn-primary col-1" style="margin-right: 14px"
+                                            (click)="saveInspectionTest()"
+                                            aria-label="Close">
+                                        {{ "Save" | localize }}
+                                    </button>
                                 </div>
+
+
+                            </form>
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered">
+                                    <thead class="bg-light">
+                                        <tr>
+                                            <th>{{ "Name" | localize }}</th>
+                                            <th>{{ "Code" | localize }}</th>
+                                            <th>{{ "Cost" | localize }}</th>
+                                            <th style="width: 310px;"></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let requestTest of requestTests">
+                                            <td>{{ requestTest.name }}</td>
+                                            <td>{{ requestTest.code }}</td>
+                                            <td>{{ requestTest.cost}}</td>
+                                            <td>
+
+                                                <button type="button"
+                                                        class="btn btn-sm bg-danger mx-2"
+                                                        (click)="delete(requestTest)">
+                                                    <i class="fas fa-trash"></i>
+                                                    {{ "Delete" | localize }}
+                                                </button>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
-
-
-
-                            <button type="button"
-                                    [disabled]="!requestInspectionForm.form.valid || saving"
-                                    class="btn btn-primary col-1" style="margin-right: 14px"
-                                    (click)="saveInspectionTest()"
-                                    aria-label="Close">
-                                {{ "Save" | localize }}
-                            </button>
-                        </div>
-
-
-                    </form>
-                    <div class="table-responsive">
-                        <table class="table table-striped table-bordered">
-                            <thead class="bg-light">
-                                <tr>
-                                    <th>{{ "Name" | localize }}</th>
-                                    <th>{{ "Code" | localize }}</th>
-                                    <th>{{ "Cost" | localize }}</th>
-                                    <th style="width: 310px;"></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let requestTest of requestTests">
-                                    <td>{{ requestTest.name }}</td>
-                                    <td>{{ requestTest.code }}</td>
-                                    <td>{{ requestTest.cost}}</td>
-                                    <td>
-
-                                        <button type="button"
-                                                class="btn btn-sm bg-danger mx-2"
-                                                (click)="delete(requestTest)">
-                                            <i class="fas fa-trash"></i>
-                                            {{ "Delete" | localize }}
-                                        </button>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                        </tab>
+                        <tab [heading]="'History' | localize" class="pt-3 px-2">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered">
+                                    <thead class="bg-light">
+                                        <tr>
+                                            <th>{{ "ActionName" | localize }}</th>
+                                            <th>{{ "ActionNote" | localize }}</th>
+                                            <th>{{ "CreationDate" | localize }}</th>
+                                            <!--<th style="width: 310px;"></th>-->
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let requestHistory of requestHistories">
+                                            <td>{{ requestHistory.actionName }}</td>
+                                            <td>{{ requestHistory.actionNotes }}</td>
+                                            <td>{{ requestHistory.creationTime  | date: 'dd/MM/yyyy'}}</td>
+                                            
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </tab>
+                    </tabset>
                 </div>
             </div>
         </div>
