--- a/angular/src/app/app-users/app-user-edit/app-user-edit.component.html
+++ b/angular/src/app/app-users/app-user-edit/app-user-edit.component.html
@@ -233,7 +233,7 @@
                     </div>
                 </div>
 
-                <div class="form-group row required">
+                <!--<div class="form-group row required">
                     <label class="col-md-3 col-form-label" for="CommericalName">
                         {{ "Name" | localize }}
                     </label>
@@ -250,7 +250,7 @@
                         <abp-validation-summary [control]="nameModel"
                                                 [controlEl]="nameE1"></abp-validation-summary>
                     </div>
-                </div>
+                </div>-->
                 <!--<div class="form-group row required">
                     <label class="col-md-3 col-form-label" for="surname">
                         {{ "Surname" | localize }}
